--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
     "jsx-loader": "^0.13.2",
+    "run-sequence": "^1.1.5",
     "webpack": "^1.12.13"
   }
 }
