Adding scripts to run a clean install of node_modules.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Making a React app on my own (sans a specific tutorial).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf ./node_modules && npm cache clean",
+    "cleaninstall": "npm run clean && npm install"
   },
   "author": "Cheryl Yaeger",
   "license": "ISC",
