--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "Cheryl Yaeger",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.5.2",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "graphql": "^0.4.18",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
@@ -20,7 +24,7 @@
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
